@@ -2,8 +2,8 @@
 <HEAD>
 	<META NAME="author" CONTENT="Easy Software Products">
 	<META NAME="copyright" CONTENT="Copyright 1997-2001, See the GNU General Public License for Details.">
-	<META NAME="docnumber" CONTENT="ESP-003-20010830">
-	<TITLE>HTMLDOC 1.8.15b3 Software Users Manual</TITLE>
+	<META NAME="docnumber" CONTENT="ESP-003-20010921">
+	<TITLE>HTMLDOC 1.8.15 Software Users Manual</TITLE>
 </HEAD>
 <BODY>
 
@@ -12,7 +12,7 @@
 <H1 ALIGN="RIGHT"><A NAME="INTRO">Introduction</A></H1>
 
 This document describes how to use the <I>HTMLDOC</I> software, version
-1.8.15b3.  <I>HTMLDOC</I> converts Hyper-Text Markup Language ("HTML") input
+1.8.15.  <I>HTMLDOC</I> converts Hyper-Text Markup Language ("HTML") input
 files into indexed HTML, Adobe&reg; PostScript&reg;, or Adobe Portable
 Document Format ("PDF") files. 
 
